# shap-selection

./: .gitignore  README.md  pyproject.toml
src/shap_selection/: __init__.py  _core.py
tests/: test_shap_selection.py
