[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shap-selection"
version = "1.0.1"
description = "Feature selection via SHAP values, based on Marcilio-Jr & Eler (SIBGRAPI 2020)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["shap", "feature-selection", "machine-learning", "explainability"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "shap>=0.42",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
knee = [
    "kneeliverse>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "kneeliverse>=1.0",
]

[project.urls]
Repository = "https://github.com/your-username/shap-selection"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
